--- a/social_nw/main/src/main/webapp/static/css/logback.css
+++ b/social_nw/main/src/main/webapp/static/css/logback.css
@@ -117,3 +117,13 @@ tr.strikeout td:after {
     content: "\00B7";
     font-size: 1px;
 }
+
+
+.warn  { font-weight: bold; color: #FF6600;}
+.error { font-weight: bold; color: #CC0000;}
+tr.even { background: #FFFFFF; }
+tr.odd  { background: #EAEAEA; }
+td.date { text-align: right; font-family: courier, monospace; font-size: smaller; }
+td.level { text-align: right; }
+tr.header { background: #596ED5; color: #FFF; font-weight: bold; font-size: larger; }
+td.exception { background: #A2AEE8; white-space: pre; font-family: courier, monospace;}
