--- a/social_nw/main/src/main/webapp/static/css/main.css
+++ b/social_nw/main/src/main/webapp/static/css/main.css
@@ -7,10 +7,10 @@ body {
     padding-top: 50px;
 }
 
-
 /*
  * Global add-ons
  */
+
 
 .sub-header {
     padding-bottom: 10px;
@@ -138,7 +138,9 @@ ul.alert-dropdown {
  */
 
 .rightbar{
-    top: 51px;
+    padding-top: 25px;
+    padding-left: 0;
+    padding-right: 25px;
 }
 
 /*
@@ -146,7 +148,7 @@ ul.alert-dropdown {
  */
 
 .main {
-    padding: 20px;
+    padding: 25px;
 }
 @media (min-width: 768px) {
     .main {
